--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
@@ -1,4 +1,4 @@
-.experiment-container {  
+.experiment-container {
   .header-sec {
     background: #f8f9fa;
     border-radius: 4px;
@@ -129,7 +129,7 @@
               display: none;
               position: absolute;
               right: 30px;
-              img{
+              img {
                 margin-left: 15px;
                 cursor: pointer;
               }
@@ -277,16 +277,16 @@
                 //     height: 100%;
                 //     width: 1px;
                 // }
-                ngb-progressbar{
-                  .progress{
+                ngb-progressbar {
+                  .progress {
                     height: 6px;
-                    background: #E4E5E7;
+                    background: #e4e5e7;
                     border-radius: 6px;
                     margin-top: 6px;
-                    .progress-bar{
-                      &.bg-secondary{
-                          border-radius: 6px;
-                          background: #BDC1C6 !important;
+                    .progress-bar {
+                      &.bg-secondary {
+                        border-radius: 6px;
+                        background: #bdc1c6 !important;
                       }
                     }
                   }
@@ -387,42 +387,42 @@
 }
 
 ::ng-deep .addFieldModalPop {
-  .info-notifcation{
+  .info-notifcation {
     display: inline-flex;
     align-items: center;
-    background: #E7F1FF;
+    background: #e7f1ff;
     border-radius: 3px;
     padding: 7px 10px;
     margin-bottom: 20px;
     margin-top: -8px;
-    .title{
-      color: #0D6EFD;
+    .title {
+      color: #0d6efd;
       font-weight: normal;
       font-size: 12px;
       line-height: 14px;
     }
-    img{
+    img {
       margin-right: 8px;
     }
   }
-  .pr-30{
+  .pr-30 {
     padding-right: 30px !important;
   }
-    .delete-rule{
-      position: absolute;
-      right: 0;
-      bottom: 8px;
-      cursor: pointer;
-    }
-    input::-webkit-outer-spin-button,
-    input::-webkit-inner-spin-button {
-      -webkit-appearance: none;
-      margin: 0;
-    }
+  .delete-rule {
+    position: absolute;
+    right: 0;
+    bottom: 8px;
+    cursor: pointer;
+  }
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
   /* Firefox */
-    input[type=number] {
-      -moz-appearance: textfield;
-    }
+  input[type="number"] {
+    -moz-appearance: textfield;
+  }
   .modal-dialog {
     .modal-content {
       box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1) !important;
@@ -581,4 +581,7 @@
 .dropdown-menu li {
   padding: 7px;
   cursor: pointer;
+}
+.disable_edit {
+  background-color: #eff0f1;
 }
