--- a/findly-builder/src/app/components/status-docker/status-docker.component.scss
+++ b/findly-builder/src/app/components/status-docker/status-docker.component.scss
@@ -26,8 +26,21 @@
                 font-size: 10px;
                 line-height: 12px;
                 .tooltip-data{
+                    display: none;
                     cursor: pointer;
                     margin-left: 4px;
+                    img{
+                        height: 11px;
+                    }
+                }
+            }
+            .task_content{
+                &:hover{
+                    .desc{
+                        .tooltip-data{
+                            display: inline;
+                        }
+                    }
                 }
             }
             .img-block{
