--- a/findly-builder/src/app/components/user-engagement/user-engagement.component.html
+++ b/findly-builder/src/app/components/user-engagement/user-engagement.component.html
@@ -156,12 +156,12 @@
                             <div echarts [options]="geoBar" class="demo-chart-graphMode"></div>
                         </div>
                     </div>
-                    <div class="col-6 box-content">
+                    <!-- <div class="col-6 box-content">
                         <div class="full-card">
                             <div class="title-card">{{'metrics.user_engagement.Sentiments'| translate}}</div>
                             <div echarts [options]="sentimentsBar" class="demo-chart-graphMode"></div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>       
