--- a/findly-builder/src/app/components/dashboard/dashboard.component.html
+++ b/findly-builder/src/app/components/dashboard/dashboard.component.html
@@ -234,25 +234,26 @@
                         <div class="title-card">{{'metrics.dash_board_view.Top_Search_Results'| translate}} </div>
                         <div class="table-content-data">
                             <div class="table_header row m-0">
-                                <div class="col-5 header-title"><img src="assets/icons/sort_up_down.svg">{{'metrics.dash_board_view.Searched_Intent'| translate}}</div>
+                                <div class="col-6 header-title"><img src="assets/icons/sort_up_down.svg">{{'metrics.dash_board_view.Searched_Intent'| translate}}</div>
                                 <div class="col-1 header-title text-right"><img src="assets/icons/sort_up_down.svg"></div>
                                 <div class="col-1 header-title text-center">{{'metrics.dash_board_view.Appearances'| translate}}</div>
                                 <div class="col-1 header-title text-center"><img src="assets/icons/sort_up_down.svg">{{'metrics.dash_board_view.Clicks'| translate}}</div>
-                                <div class="col-1 header-title text-center" ngbTooltip='Click-Through Rate'><img src="assets/icons/sort_up_down.svg">{{'metrics.dash_board_view.ctr'| translate}}</div>
+                                <div class="col-2 header-title text-center"><img src="assets/icons/sort_up_down.svg">{{'metrics.dash_board_view.ctr'| translate}}</div> <!--  ngbTooltip='Click-Through Rate' -->
                                 <div class="col-1 header-title text-center"><img src="assets/icons/sort_up_down.svg">{{'metrics.dash_board_view.Avg_Position'| translate}}</div>
-                                <div class="col-1 header-title text-center"><img src="assets/icons/pos-thumb.svg"></div>
-                                <div class="col-1 header-title text-center"><img src="assets/icons/neg-thumb.svg"></div>
+                                <!-- <div class="col-1 header-title text-center"><img src="assets/icons/pos-thumb.svg"></div>
+                                <div class="col-1 header-title text-center"><img src="assets/icons/neg-thumb.svg"></div> -->
                                 <!-- <div class="col-2 header-title text-right"><img src="assets/icons/sort_up_down.svg">
                                     Count</div> -->
                             </div>
                             <div class="table_body row m-0"  *ngFor="let topSearchResult of topSearchResults;let i = index">
                                 <div class="col-6 body-title ">{{topSearchResult.answer}}</div>
+                                <div class="col-1 header-title text-right"></div>
                                 <div class="col-1 body-title text-center">{{topSearchResult.appearances}}</div>
                                 <div class="col-1 body-title text-center">{{topSearchResult.clicks}}</div>
-                                <div class="col-1 body-title text-center">{{topSearchResult.clickThroughRate}}%</div>
+                                <div class="col-2 body-title text-center">{{topSearchResult.clickThroughRate}}%</div>
                                 <div class="col-1 body-title text-center">{{topSearchResult.avgPosition}}</div>
-                                <div class="col-1 body-title text-center">{{topSearchResult.positiveFeedback}}</div>
-                                <div class="col-1 body-title text-center">{{topSearchResult.negativeFeedback}}</div>
+                                <!-- <div class="col-1 body-title text-center">{{topSearchResult.positiveFeedback}}</div>
+                                <div class="col-1 body-title text-center">{{topSearchResult.negativeFeedback}}</div> -->
                             </div>
                             <!-- <div class="table_body row m-0">
                                 <div class="col-6 body-title ">Opening a new account in HDFC</div>
