Commit includes fix for toggling 'Query Analytics' in Web SDK

--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -7078,6 +7078,7 @@ body, html{
     width: 134px;
     text-align: right;    
     cursor: pointer !important;
+    z-index: 100;
 }
 .search-container.conversation #searchChatContainer .messageBubble .userMessage .query-analytics-control-container img{
     margin-right: 7px;
